# crok

./: CHANGELOG.md  Cargo.toml
crates/clitest/: Cargo.toml  README.md
crates/clitest-integration/tests/: integration_tests.rs
crates/clitest-lib/: Cargo.toml
crates/clitest-lib/src/: command.rs  script.rs
crates/clitest/src/: main.rs
crates/crok/: Cargo.toml  README.md
crates/crok-lib/src/: command.rs
crates/crok/src/: lib.rs  main.rs
crates/procstream/: Cargo.toml  README.md
crates/procstream/src/: capture.rs  job.rs  lib.rs  transform.rs
tests/v0/: background.out  closed_stream_timeout.cli  closed_stream_timeout.out  trailing_cr.cli  trailing_cr.out
