[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.7.0" # Update versions below as well

[workspace.dependencies]
clitest-lib = { path = "crates/clitest-lib", version = "0.7.0" }
procstream = { path = "crates/procstream", version = "0.7.0" }

clap = "4.6.1"
derive-io = "=0.5.0"
derive_more = "2"
dirs = "6"
dunce = "1.0.5"
grok = { version = "2.4.1", default-features = false }
keepcalm = "0.4"
humantime = "2.3"
linktime = "0.17.0"
scattered-collect = "0.10.0"
mdbook-preprocessor = "0.5.3"
pathdiff = "0.2.3"
pretty_assertions = "1"
semver = "1.0.27"
serde = "1"
serde_json = "1.0.149"
serde_yaml = "0.9"
shellish_parse = "2"
tempfile = "3"
termcolor = "1"
termimad = "0.34"
termsize = "0.1"
thiserror = "2"
toml = "1.1"
unicode-segmentation = "1.12"
unicode-width = "0.2.2"
utf8-supported = "1.0.0"
fast-strip-ansi = "0.13"
