[package]
name = "crok"
license = "MIT/Apache-2.0"
version = "0.0.0"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
description = "CLI/test: A literate CLI testing tool"
repository = "https://github.com/mmastrac/clitest"
readme = "README.md"

default-run = "clitest"

[dependencies]
clitest-lib.workspace = true
clap = { workspace = true, features = ["derive"] }
termcolor.workspace = true
termimad.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
dunce.workspace = true

[[bin]]
name = "clitest"
path = "src/main.rs" 
