[package]
name = "crok"
license = "MIT/Apache-2.0"
version.workspace = true
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
description = "crok: A literate CLI testing tool"
repository = "https://github.com/mmastrac/crok"
readme = "README.md"

default-run = "crok"

[lib]
path = "src/lib.rs"

[dependencies]
crok-lib.workspace = true
clap = { workspace = true, features = ["derive"] }
termcolor.workspace = true
termimad.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
dunce.workspace = true

[[bin]]
name = "crok"
path = "src/main.rs" 
